# TFA-project

./: Makefile  a.out  output.txt
bc_list/: bc.list
my_script/: c2ll_dir.py  get_call_trace.py  sql_query_all.py
src/: CMakeLists.txt
src/lib/CallGraph/: CallGraph.cc  LayerAnalysis.cc
src/lib/TypeBuilder/: TypeBuilder.cc
src/lib/utils/: Common.cc  DBTools.cc  DBTools.h  Tools.cc  Tools.h
test/: a.out  bc.list  net-test.bc  output-all.txt  output.txt  test.bc  test.c
workspace/graph-file-driver-ops.c.bin/: cpg.bin.tmp  project.json
workspace/graph-file-iface.c.bin/: project.json
